import { merge, renderTwigFileAsNode } from '@ecl/test-utils';

import data from '@ecl/specs-component-blockquote/demo/data';

describe('Blockquote', () => {
  const template = '@ecl/blockquote/blockquote.html.twig';
  const render = (params) => renderTwigFileAsNode(template, params);

  describe('Default', () => {
    test('renders correctly', () => {
      expect.assertions(1);

      return expect(render(data)).resolves.toMatchSnapshot();
    });

    test('renders correctly with extra class names', () => {
      expect.assertions(1);

      const optionsWithExtraClasses = merge(data, {
        extra_classes: 'custom-class custom-class--test',
      });

      return expect(render(optionsWithExtraClasses)).resolves.toMatchSnapshot();
    });

    test('renders correctly with image', () => {
      expect.assertions(1);

      const withImage = merge(data, {
        image: {
          path: 'https://inno-ecl.s3.amazonaws.com/media/examples/example-image-square.jpg',
          alt: 'image',
        },
      });

      return expect(render(withImage)).resolves.toMatchSnapshot();
    });

    test('renders correctly with extra attributes', () => {
      expect.assertions(1);

      const optionsWithExtraClasses = merge(data, {
        extra_attributes: [
          { name: 'data-test', value: 'data-test-value' },
          { name: 'data-test-1', value: 'data-test-value-1' },
        ],
      });

      return expect(render(optionsWithExtraClasses)).resolves.toMatchSnapshot();
    });
  });
});
